; ModuleID = '/home/carl/AnghaBench/openssl/crypto/evp/extr_evp_lib.c_EVP_hex2ctrl.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/evp/extr_evp_lib.c_EVP_hex2ctrl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INT_MAX = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @EVP_hex2ctrl(i32 (i8*, i32, i8*, i64)* %0, i8* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32 (i8*, i32, i8*, i64)*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  store i32 (i8*, i32, i8*, i64)* %0, i32 (i8*, i32, i8*, i64)** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  store i32 -1, i32* %12, align 4
  %13 = load i8*, i8** %9, align 8
  %14 = call i8* @OPENSSL_hexstr2buf(i8* %13, i64* %11)
  store i8* %14, i8** %10, align 8
  %15 = load i8*, i8** %10, align 8
  %16 = icmp eq i8* %15, null
  br i1 %16, label %17, label %18

17:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %33

18:                                               ; preds = %4
  %19 = load i64, i64* %11, align 8
  %20 = load i64, i64* @INT_MAX, align 8
  %21 = icmp sle i64 %19, %20
  br i1 %21, label %22, label %29

22:                                               ; preds = %18
  %23 = load i32 (i8*, i32, i8*, i64)*, i32 (i8*, i32, i8*, i64)** %6, align 8
  %24 = load i8*, i8** %7, align 8
  %25 = load i32, i32* %8, align 4
  %26 = load i8*, i8** %10, align 8
  %27 = load i64, i64* %11, align 8
  %28 = call i32 %23(i8* %24, i32 %25, i8* %26, i64 %27)
  store i32 %28, i32* %12, align 4
  br label %29

29:                                               ; preds = %22, %18
  %30 = load i8*, i8** %10, align 8
  %31 = call i32 @OPENSSL_free(i8* %30)
  %32 = load i32, i32* %12, align 4
  store i32 %32, i32* %5, align 4
  br label %33

33:                                               ; preds = %29, %17
  %34 = load i32, i32* %5, align 4
  ret i32 %34
}

declare dso_local i8* @OPENSSL_hexstr2buf(i8*, i64*) #1

declare dso_local i32 @OPENSSL_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
